@@ -1,4 +1,5 @@
 0.5.4
+ - fix: possibly fix white UI window on Windows 7
  - fix: start persistent upload jobs always in same order
 0.5.3
  - enh: re-use compressed resources from now on
